Fixed navigation overlapping.

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -45,6 +45,7 @@
 
   background-color: rgba(0, 0, 0, 0.75);
   width: 100%;
+  z-index: 10;
 }
 
 .nav-list {
